<resources>
    <string name="app_name">WearHacks 2016</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Elements:</string>
    <string name="title_activity_loading_bar">LoadingBar</string>
</resources>
