<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/muses_spinner"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/refresh"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/refresh" />
        <Button
            android:id="@+id/connect"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/connect" />
        <Button
            android:id="@+id/disconnect"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/disconnect" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/status"
        android:alpha="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:onClick="main" />

    <TextView
        android:id="@+id/con_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/undefined"
        android:alpha="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/eeg"
        android:alpha="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/eeg_tp9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
        <TextView
            android:id="@+id/eeg_fp1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />/>

        <TextView
            android:id="@+id/eeg_fp2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1"
            />
        <TextView
            android:id="@+id/eeg_tp10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/accel"
        android:alpha="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/acc_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
        <TextView
            android:id="@+id/acc_y"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
        <TextView
            android:id="@+id/acc_z"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/muse_elem"
        android:alpha="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/elem1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
        <TextView
            android:id="@+id/elem2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
        <TextView
            android:id="@+id/elem3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
        <TextView
            android:id="@+id/elem4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/init_val"
            android:alpha="1" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/version"
        android:alpha="1" />
    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/undefined"
        android:alpha="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/pause"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/pause"
            android:alpha="1" />
    </LinearLayout>

</LinearLayout>